--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8" />
   <title>ExploRide – Wielka Mapa Urbexu</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#0f131b" />
+  <link rel="manifest" href="/ExploMapa/manifest.json" />
+  <meta name="theme-color" content="#000000" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.css" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/png" sizes="1080x1080" href="fav1080.png">
-<link rel="apple-touch-icon" sizes="1080x1080" href="fav1080.png">
-<link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/png" sizes="1080x1080" href="/ExploMapa/fav1080.png">
+<link rel="apple-touch-icon" sizes="1080x1080" href="/ExploMapa/fav1080.png">
 
   <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
   <style>
